<resources>
    <string name="app_name">Imprenta Express</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="logout">Salir de la sesión</string>
    <string name="inventario">Inventario</string>
    <string name="companyNamePlaceholder">Nombre de la Empresa</string>
    <string name="agregar_consumible">Agregar Consumible</string>
    <string name="nombre_label">Nombre:</string>
    <string name="nombre_hint">Nombre del consumible</string>
    <string name="background">background</string>
    <string name="cantidad_label">Cantidad:</string>
    <string name="cantidad_hint">Cantidad de unidades</string>
    <string name="codigo_hint">Código de identificación</string>
    <string name="codigo_label">Código:</string>
    <string name="tipo_label">Tipo:</string>
    <string name="tipo_hint">Categoría del consumible</string>
    <string name="precio_label">Precio:</string>
    <string name="precio_hint">Precio del consumible</string>
    <string name="observaciones_label">Observaciones:</string>
    <string name="observaciones_hint">Detalles o condiciones del consumible</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="cargar_imagen">Cargar imagen</string>
    <string name="imagen_del_consumible">Imagen del consumible</string>
    <string name="atras">Atrás</string>
    <string name="listo">Listo</string>
    <string name="listo_textView">¡Listo!</string>
    <string name="codigo_qr">Código QR del consumible</string>
    <string name="imprimir">Imprimir</string>
    <string name="profilePictureDescription">Imagen del usuario</string>
    <string name="logoutButtonDescription">Salir de la sesión</string>
    <string name="inventarioButtonDescription">Ver el inventario</string>
    <string name="agregarButtonDescription">Agregar consumible</string>
    <string name="escanearButtonDescription">Escanear código QR</string>
    <string name="producto_ejemplo">Pepsi 500ml</string>
    <string name="precio_ejemplo">Precio: $19.99</string>
    <string name="cantidad_ejemplo">Cantidad: 20</string>
    <string name="tipo_ejemplo">Tipo: Refresco</string>
    <string name="codigo_ejemplo">Código: 123123123</string>
    <string name="observaciones_ejemplo">Observaciones: En buen estado</string>
    <string name="agregar">Agregar</string>
    <string name="descargar">Descargar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_costumible">Editar consumible</string>
    <string name="editar">Editar</string>
    <string name="imprenta_express">Imprenta Express</string>
    <string name="ver_producto">Ver producto</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="ver_qr">Ver QR</string>
    <string name="descargar_qr">Descargar QR</string>
    <string name="editar_detalles">Editar detalles</string>
    <string name="editar_imagen">Editar imagen</string>
    <string name="restar">Restar</string>
    <string name="zero">0</string>
    <string name="detalles">Detalles:</string>
    <string name="movimientos">Movimientos</string>
    <string name="fecha">01/01/01 – 01:01am</string>
    <string name="cantidad">200 unidades</string>
    <string name="operador">Entrada</string>
    <string name="unidades_actuales">Unidades actuales:</string>
    <string name="borrar_producto">Borrar producto</string>
    <string name="eliminar">Eliminar</string>
    <string name="obtener_qr">Obtener QR</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion_de_borrado">Está seguro de querer borrar el producto?</string>
</resources>