<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewProductFragment">

    <RelativeLayout
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:text="@string/nombre_producto" />

        <ImageView
            android:id="@+id/imageViewImagen"
            android:layout_below="@id/textViewNombre"
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:padding="1dp"
            android:background="@drawable/border"
            app:srcCompat="@drawable/blank"
            android:contentDescription="@string/imagen_del_consumible" />

        <LinearLayout
            android:id="@+id/detallesLayout"
            android:layout_below="@id/imageViewImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:id="@+id/cantidadLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelCantidad"
                    android:layout_width="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"
                    android:text="@string/cantidad_label" />

                <TextView
                    android:id="@+id/valueCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/labelCantidad"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/cantidad_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/precioLayout"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelPrecio"
                    android:layout_width="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"
                    android:text="@string/precio_label" />

                <TextView
                    android:id="@+id/valuePrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/labelPrecio"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/precio_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tipoLayout"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelTipo"
                    android:layout_width="100dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"
                    android:text="@string/tipo_label"/>

                <TextView
                    android:id="@+id/valueTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/labelTipo"
                    android:layout_alignParentEnd="true"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/tipo_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/observacionesLayout"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelObservaciones"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/orange_700"
                    android:layout_marginEnd="10dp"
                    android:text="@string/detalles" />

                <TextView
                    android:id="@+id/editTextObservaciones"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="20sp"
                    android:text="@string/observaciones_hint"
                    android:layout_toEndOf="@+id/labelObservaciones"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="@id/labelObservaciones" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/navButtonsLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonMovimientos"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/orange_700"
                android:layout_alignParentStart="true"
                android:text="@string/movimientos"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonEditarDetalles"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_500"
                android:layout_below="@id/buttonMovimientos"
                android:layout_alignParentStart="true"
                android:text="@string/editar_detalles"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonEditarImagen"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonMovimientos"

                android:layout_alignParentEnd="true"
                android:text="@string/editar_imagen"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonSalir"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonEditarDetalles"
                android:backgroundTint="@color/orange_200"
                android:layout_alignParentStart="true"
                android:text="@string/salir"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonVerQr"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonEditarImagen"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/orange_700"
                android:text="@string/descargar_qr"
                app:cornerRadius="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>