<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddDataFragment">

    <RelativeLayout
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/agregar_consumible" />

        <RelativeLayout
            android:id="@+id/nombreLayout"
            android:layout_below="@id/textViewAgregar"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/nombre_label"
                android:labelFor="@id/editTextNombre"/>

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/textViewNombre"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/nombre_hint"
                android:autofillHints="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cantidadLayout"
            android:layout_below="@id/nombreLayout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCantidad"
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="@string/cantidad_label"
                android:labelFor="@id/editTextCantidad"/>

            <EditText
                android:id="@+id/editTextCantidad"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/textViewCantidad"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/cantidad_hint"
                android:autofillHints="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tipoLayout"
            android:layout_below="@+id/cantidadLayout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTipo"
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/tipo_label"
                android:labelFor="@id/editTextTipo"/>

            <EditText
                android:id="@+id/editTextTipo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/textViewTipo"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/tipo_hint"
                android:autofillHints="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/precioLayout"
            android:layout_below="@+id/tipoLayout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPrecio"
                android:layout_width="100dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/precio_label"
                android:labelFor="@id/editTextPrecio"/>

            <EditText
                android:id="@+id/editTextPrecio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/textViewPrecio"
                android:layout_alignParentEnd="true"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/precio_hint"
                android:autofillHints="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/observacionesLayout"
            android:layout_below="@id/precioLayout"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewObservaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/observaciones_label"
                android:labelFor="@id/editTextObservaciones"/>

            <EditText
                android:id="@+id/editTextObservaciones"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/observaciones_hint"
                android:layout_below="@id/textViewObservaciones"
                android:autofillHints="" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonSalir"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_200"
                android:layout_alignParentStart="true"
                android:text="@string/salir"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonSiguiente"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/siguiente"
                app:cornerRadius="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>