<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ActivityAgregar">

    <TextView
        android:id="@+id/textViewCargarImagen"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/cargar_imagen" />

    <Button
        android:id="@+id/buttonCamara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCargarImagen"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/camara"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/buttonGaleria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCamara"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/galeria"
        app:cornerRadius="20dp" />

    <ImageView
        android:id="@+id/imageViewCargarImagen"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_below="@id/buttonGaleria"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        app:srcCompat="@drawable/pluma_bic"
        android:contentDescription="@string/imagen_del_consumible" />

    <Button
        android:id="@+id/buttonAtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCargarImagen"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="240dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        android:backgroundTint="@color/orange_200"
        android:text="@string/atras"

        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCargarImagen"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="240dp"
        android:text="Agregar"
        app:cornerRadius="20dp" />

</RelativeLayout>