<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GetQrFragment">

    <RelativeLayout
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewCodigoQr"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/codigo_qr" />

        <ImageView
            android:id="@+id/imageViewCodigoQr"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:paddingVertical="1dp"
            android:layout_below="@id/textViewCodigoQr"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:contentDescription="@string/imagen_del_consumible"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/blank" />

        <Button
            android:id="@+id/buttonDescargar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewCodigoQr"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:text="@string/descargar"
            app:cornerRadius="20dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/buttonVerProducto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/orange_200"
                android:text="@string/ver_producto"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonSalir"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/orange_200"
                android:text="@string/salir"
                android:textColor="@color/black"
                app:cornerRadius="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>